# quick-storer

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml  rust.yml
src/: main.rs
