[package]
name = "quick-storer"
version = "2.0.0"
edition = "2021"
authors = ["AlbertLarsan68"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "An easy to use file and folder storing software"
repository = "https://github.com/AL68-co/quick-storer"
categories = ["command-line-utilities", "compression", "data-structures", "encoding", "filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
mla = "1.4.0"
structopt = "0.3.26"

[build-dependencies]
image = { version = "0.25.0", features = ["ico", "png"], default-features = false }

[target."cfg(windows)".build-dependencies]
winres = "0.1.12"

[features]
